<resources>
    <string name="app_name">VideoCreate</string>
    <string name="make_video">MAKE VIDEO</string>
    <string name="social_post_video">social post video</string>
    <string name="project_title">PROJECT</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="login">LOGIN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="telephone_number">Telephone Number</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login_here">Login here</string>
    <string name="get_password">GET PASSWORD</string>
    <string name="backdata">Back</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="enter_otp">Please enter OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="loading">Loading...</string>
    <string name="enter_name">Please enter firstname</string>
    <string name="enter_last_name">Please enter lastname</string>
    <string name="enter_username">Please enter username</string>
    <string name="email_not_match">Email Not matching</string>
    <string name="enter_valid_email">Please Enter Valid Email</string>
    <string name="enter_phone_number">Please enter phone number</string>
    <string name="password_not_match">Password Not matching</string>
    <string name="messege">message</string>
    <string name="success_update">Succesfully Update</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_libary">Choose Image For Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo">Add Photo</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="eternal_storage_persmission">External storage permission is necessary</string>
    <string name="Web_Client_Id">47865612363-fv9rlodo5n5kn5o4mirqmltdc7rn26q2.apps.googleusercontent.com</string>
    <string name="facebook_app_id">306844116959036</string>
    <string name="fb_login_protocol_scheme">fb306844116959036</string>
    <string name="tv_google">Google</string>
    <string name="tv_facebook" translatable="false">Facebook</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="vip">VIP VIDEO04</string>
    <string name="advanced_features">Advanced Features</string>
    <string name="special_effects_nspecial_fonts">Special effects\nSpecial fonts</string>
    <string name="watermarks_nhigh_quality_videos">watermarks \nHigh-quality videos</string>
    <string name="additional_music_n_special_templates">Additional music\n Special templates</string>
    <string name="_2_buy_now">2 $ BUY NOW</string>
    <string name="video">VIDEO</string>
    <string name="select_theme">SELECT THEME</string>
    <string name="edit_video">EDIT VIDEO</string>
    <string name="arial">Arial</string>
    <string name="angry">Angry</string>
    <string name="calm">Calm</string>
    <string name="love">Love</string>
    <string name="fear">Fear</string>
    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    <string name="trim">TRIM</string>
    <string name="project">PROJECT</string>
    <string name="add_text_here">ADD TEXT HERE</string>
    <string name="music">MUSIC</string>
    <string name="happy_dreams">Happy Dreams</string>
    <string name="preview">PREVIEW</string>
    <string name="done">Done</string>
    <string name="save">SAVE</string>
    <string name="name">Name</string>
    <string name="ads">ADS</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="share">SHARE</string>
    <string name="video_maker">Video Maker</string>
    <string name="studio">STUDIO</string>
    <string name="premium_version">Premium Version</string>
    <string name="the_full_youcam_makeup_experience">The Full YouCam Makeup Experience</string>
    <string name="login_or_subscribe">LOGIN OR SUBSCRIBE</string>
    <string name="remove_watermark_on_photos_amp_videos"><![CDATA[Remove Watermark on Photos & Videos]]></string>
    <string name="templates">Templates</string>
    <string name="stories">Stories</string>
    <string name="video_post">Video Post</string>
    <string name="picture_post">Picture Post</string>
    <string name="news">News</string>

    <string name="tv_language1">Arabic</string>
    <string name="tv_language2">English</string>
    <string name="select_language">Select Language</string>
    <string name="video_story">video story</string>
    <string name="download">DOWNLOADS</string>
    <string name="myfiles">MY FILES</string>
    <string name="permite_permisssion">Please grant required permissions.</string>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>>
</resources>
