<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SucscribeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPurple"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/premium_version"
        android:textSize="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_full_youcam_makeup_experience"
        android:textSize="18dp"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        />

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remove_watermark_on_photos_amp_videos"
        android:textSize="18dp"
        android:gravity="center"
        android:textColor="@color/colorPink"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_or_subscribe"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/bg_home"
        android:layout_below="@id/lin"/>



    </LinearLayout>

</LinearLayout>