<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/images"
    android:backgroundTintMode="src_over"
    android:backgroundTint="#9A000000"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LanguageSelectActivity">


        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:text="@string/select_language"
                android:gravity="center"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/btn_english"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_language2"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_home"
            />

            <Button
                android:id="@+id/btn_arabic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_language1"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:background="@drawable/bg_home"
                android:layout_below="@id/lin"/>

        </LinearLayout>

</LinearLayout>