<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    android:background="@drawable/images"
    android:backgroundTintMode="src_over"
    android:backgroundTint="#9A000000"
    >


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPurple"
        app:title="@string/edit_profile"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
       />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/lin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:gravity="center"

            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_marginTop="20dp"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_user"
                app:civ_border_color="@color/colorPurple"
                app:civ_border_width="1dp" />





            <EditText
                android:id="@+id/etfname"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:inputType="text"
                android:drawablePadding="10sp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_bg"
                android:padding="10sp"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_lname"
                android:layout_marginTop="10dp"
                android:drawablePadding="10sp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:inputType="text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_bg"
                android:padding="10sp"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etuname"
                android:layout_marginTop="10dp"
                android:drawablePadding="10sp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:inputType="text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_bg"
                android:padding="10sp"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/etphone"
                android:layout_marginTop="10dp"
                android:drawablePadding="10sp"
                android:drawableLeft="@drawable/ic_phone_android_black_24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telephone_number"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:inputType="number"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edittext_bg"
                android:padding="10sp"
                android:textSize="14sp"/>






            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lin"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:background="@drawable/bg_home"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="14sp"
                />


        </LinearLayout>

    </ScrollView>



</LinearLayout>