<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@drawable/images"
    android:backgroundTintMode="src_over"
    android:backgroundTint="#9A000000"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:theme="@style/AppTheme"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/icon"
                />


            <!--<ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/logo_img"
                />-->


            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/forgot_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:textColorHint="@color/colorWhite"
                android:drawablePadding="10dp"
                android:paddingLeft="10dp"
                android:textColor="@color/white"

                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/ic_action_mailnew"
                android:background="@drawable/edittext_bg"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:id="@+id/sendotp"
                    android:text="@string/get_password"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_home"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/goback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp"
                android:text="@string/backdata"
                android:textSize="14sp"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>